<resources>
    <string name="app_name">DoitApp</string>
    <string name="add">Add</string>
    <string name="add_item_txtField">Add a new item...</string>
    <string name="saveButton">Save</string>
    <string name="mlEditTxt">Edit Task...</string>
    <string name="editTaskLabel">Edit Tasks:</string>
    <string name="mletedittext">mletEditText</string>
    <string name="edittasksavebtn">editTaskSaveBtn</string>
</resources>
